--- a/main.css
+++ b/main.css
@@ -229,16 +229,16 @@ body {
     width: 100%; height: 32px;
     left: 50%;
     transform: translateX(-50%);
-    margin: 0;
+    margin: 0; margin-top: -1px;
 }
 
 .panel .vertical input[type="radio"]:first-child {
+    margin-top: 0;
+
     border-radius: 2px 2px 0 0;
 }
 
 .panel .vertical input[type="radio"]:last-child {
-    margin-top: -1px;
-
     border-radius: 0 0 2px 2px;
 }
 
