--- a/main.css
+++ b/main.css
@@ -18,15 +18,30 @@ body {
     position: absolute;
     width: 100%; height: 100%;
     margin: 0;
-
-    background-color: white;
-    background-size: var(--cell-size) var(--cell-size);
 }
 
 /* Special elements */
 
 .MathJax_SVG {
     outline: none;
+}
+
+/* The grid of cells */
+
+.canvas {
+    position: absolute;
+    width: 100%; height: 100%;
+
+    background-color: white;
+    background-size: var(--cell-size) var(--cell-size);
+}
+
+.pan .canvas {
+    cursor: grab;
+}
+
+.pan .canvas:active {
+    cursor: grabbing;
 }
 
 /* Grid interaction */
@@ -70,7 +85,7 @@ body {
     transform: translate(-50%, -50%);
 }
 
-.ui:not(.connect) .vertex {
+.ui.default .vertex {
     cursor: move;
 }
 
@@ -84,12 +99,14 @@ body {
 
     line-height: calc(var(--cell-size) / 2);
     text-align: center;
+}
 
+.ui.default .vertex .content {
     cursor: default;
 }
 
 /* This is so explicit because of the CSS specificity rules. */
-.ui:not(.connect):not(.move) .vertex:not(.selected):not(.source):not(.target) .content:hover {
+.ui.default .vertex:not(.selected):not(.source):not(.target) .content:hover {
     background: var(--cell-hover);
 }
 
@@ -141,7 +158,7 @@ body {
 }
 
 /* This is so explicit because of the CSS specificity rules. */
-.ui:not(.connect):not(.move) .edge:hover:not(.selected):not(.source):not(.target) {
+.ui.default .edge:hover:not(.selected):not(.source):not(.target) {
     background: var(--cell-hover);
 }
 
