--- a/main.css
+++ b/main.css
@@ -18,12 +18,35 @@ body {
     position: absolute;
     width: 100%; height: 100%;
     margin: 0;
+
+    font-family: sans-serif;
 }
 
 /* Special elements */
 
 .MathJax_SVG {
     outline: none;
+}
+
+.error {
+    position: fixed;
+    width: 100%;
+    left: 0; top: 0;
+    z-index: 10;
+    padding: 8px 0;
+
+    background: hsl(0, 50%, 50%);
+    color: white;
+
+    text-align: center;
+
+    user-select: none;
+
+    transition: transform 0.2s;
+}
+
+.error.hidden {
+    transform: translateY(-100%);
 }
 
 /* The grid of cells */
@@ -129,7 +152,9 @@ body {
     transform: translate(-50%, -50%);
 
     text-align: center;
+    font-family: inherit;
     font-size: 26px;
+    white-space: nowrap;
 
     pointer-events: none;
 
