--- a/main.css
+++ b/main.css
@@ -18,6 +18,7 @@ body {
     position: absolute;
     width: 100%; height: 100%;
     margin: 0;
+    overflow: hidden;
 
     font-family: sans-serif;
 }
