Add select all and deselect all buttons to the toolbar
Also fix various issues regarding cell selection interacting with the history.

--- a/main.css
+++ b/main.css
@@ -606,6 +606,7 @@ body {
     text-align: center;
     font-size: 24px;
     color: inherit;
+    white-space: nowrap;
 
     cursor: default;
     user-select: none;
