Allow the grid visibility to be toggled with `H`
This makes taking pretty screenshots easier.

--- a/main.css
+++ b/main.css
@@ -107,6 +107,10 @@ body {
 
 /* Grid interaction */
 
+.grid.hidden {
+    display: none;
+}
+
 .insertion-point {
     display: block;
     position: absolute;
