Fix issue with selecting text in export panel

--- a/main.css
+++ b/main.css
@@ -20,9 +20,11 @@ body {
     margin: 0;
     overflow: hidden;
 
-    -webkit-user-select: none;
-
     font-family: sans-serif;
+}
+
+body:not(.modal) {
+    -webkit-user-select: none;
 }
 
 /* Special elements */
