--- a/src/main.css
+++ b/src/main.css
@@ -778,7 +778,7 @@ body:not(.modal) {
 }
 
 .arrow:not(.reconnecting) > svg:first-child > path {
-    pointer-events: all;
+    pointer-events: stroke;
 }
 
 .arrow:not(.selected) > svg:first-child > path {
